--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-	<script src="script.js">
-	</script>
+	<script src="script.js"></script>
   <div class="typewriter">
-	 <h1>kristy martinez by kristy martinez</h1>
+	<h1>kristy martinez by kristy martinez</h1>
   </div>
-	<h3 class="favorites"> favorites </h3>
-  
   </body>
 </html>
 
