--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 </head>
 <body>
 	<script src="script.js"></script>
-  <div class="typewriter">
-	<h1>kristy martinez by kristy martinez</h1>
-  </div>
+	<h1 class="big-title">kristy martinez by kristy martinez</h1>
+  <table style="width:100%">
+      <tr>
+        <th><a href= "index.html" class = "navbar">Home</a></th>
+        <th><a href="stigma.html" class = "navbar">Projects</a></th>
+        <th><a href="resources.html"class = "navbar" >Favorites</a></th>
+        <th><a href="experiences.html"class = "navbar" >Memories</a></th>
+      </tr>  
+    </table>
+    <br>
   </body>
 </html>
 
+\
