added 4 main pages

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <table style="width:100%">
       <tr>
         <th><a href= "index.html" class = "navbar">Home</a></th>
-        <th><a href="stigma.html" class = "navbar">Projects</a></th>
-        <th><a href="resources.html"class = "navbar" >Favorites</a></th>
-        <th><a href="experiences.html"class = "navbar" >Memories</a></th>
+        <th><a href="projects.html" class = "navbar">Projects</a></th>
+        <th><a href="favorites.html"class = "navbar" >Favorites</a></th>
+        <th><a href="memories.html"class = "navbar" >Memories</a></th>
       </tr>  
     </table>
     <br>
+  <h5 class ="main-text"> so this is my website </h5>
   </body>
 </html>
 
-\
