added description on home page and added heart gif

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </tr>  
     </table>
     <br>
-  <h5 class ="main-text"> so this is my website </h5>
+  <h3 class ="main-text"> hi........ my name is kristy martinez and i'm a high school senior in long island, NY. this website mainly serves as my personal blog and as a way to present what i like to the internet.  as i grow as a person in age and maturity, this website will grow as well. even though my love for computer science is relatively new compared to those on the internet, this website will also contain the projects i complete as i go farther in my career. </h3>
+  <center><img src="heart.gif" alt ="heart" ></center>
   </body>
 </html>
 
