--- a/favorites.html
+++ b/favorites.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="favorites.css" rel="stylesheet" type="text/css" />
 	<link>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
