--- a/favorites.html
+++ b/favorites.html
@@ -22,7 +22,15 @@
         <th><a href="memories.html"class = "navbar" >Memories</a></th>
       </tr>  
     </table>
-    <br>
+    <img class = "planether" src="planether.jpg" alt ="heart" >
+    <br></br>
+  
+    <div class="container">
+    <img class = "transformers" src="transformers.jpg" alt ="heart" >
+    <div class="overlay">
+     <div class="text">Hello World</div>
+     </div>
+    </div>
   </body>
 </html>
 
