--- a/favorites.html
+++ b/favorites.html
@@ -22,16 +22,60 @@
         <th><a href="memories.html"class = "navbar" >Memories</a></th>
       </tr>  
     </table>
-    <img class = "planether" src="planether.jpg" alt ="heart" >
+
     <br></br>
-  
-    <div class="container">
-    <img class = "transformers" src="transformers.jpg" alt ="heart" >
-    <div class="overlay">
-     <div class="text">Hello World</div>
-     </div>
+    <h3 class = "fav-titles"> music </h3>
+    <br></br>
+
+    <h3 class = "title-words"> 
+      sofia - Clairo <br></br>
+    </h3>
+    <div>
+      <iframe src="https://open.spotify.com/embed/track/7B3z0ySL9Rr0XvZEAjWZzM?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
+
+    <h3 class = "title-words"> 
+      4EVER - Clairo <br></br>
+    </h3>
+    <div>
+     <iframe src="https://open.spotify.com/embed/track/5mIOsPuQdXchVY0jB5NO9Q?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    </div>
+
+    <h3 class = "title-words"> 
+      wachito rico - boy pablo <br></br>
+    </h3>
+    <div>
+     <iframe src="https://open.spotify.com/embed/track/0OYf62rdwDouKohtCALD55?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    </div>
+
+    <h3 class = "title-words"> 
+      I Don't Know You - The Marias <br></br>
+    </h3>
+    <div>
+     <iframe src="https://open.spotify.com/embed/track/4cJOLN346rtOty3UPACsao?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    </div>
+
+    <br></br>
+    <h3 class = "fav-titles"> food </h3>
+    <br></br>
+
+
+    <br></br>
+    <h3 class = "fav-titles"> movies </h3>
+    <br></br>
+
+
+    <br></br>
+    <h3 class = "fav-titles"> shows </h3>
+    <br></br>
+
+
+    <br></br>
+    <h3 class = "fav-titles"> trends </h3>
+    <br></br>
+
+
+
   </body>
 </html>
 
-\
