--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <title> km </title>
 </head>
 <body>
 	<script src="script.js"></script>
@@ -23,7 +24,8 @@
       </tr>  
     </table>
     <br>
-  <h3 class ="main-text"> hi........ my name is kristy martinez and i'm a high school senior in long island, NY. this website mainly serves as my personal blog and as a way to present what i like to the internet. i have been planning what to show to the world since about 2 years ago. right now,i will be taking those plans and trying my best to bring them to this website.  as i grow as a person in age and maturity, this website will grow as well. even though my love for computer science is relatively new compared to those on the internet, this website will also contain the projects i complete as i go farther in my career. </h3>
+  <h3 class ="main-text"> hi........ my name is kristy martinez and i'm a high school senior in long island, NY. this website mainly serves as my personal blog and as a way to present what i like to the internet. i have been planning what to show to the world since about 2 years ago. right now,i will be taking those plans and trying my best to bring them to this website.  as i grow as a person in age and maturity, this website will grow as well. even though my love for computer science is relatively new compared to those on the internet, this website will also contain the projects i complete as i go farther in my career. 
+  </h3>
   <center><img class ="heartgif" src="heart.gif" alt ="heart" ></center>
   <h3 class ="social-media">  <br> <br> <br>*if you wanna follow me on other platforms*  <br><br> insta: @kristymrz  <br><br>  </h3>
   
@@ -37,5 +39,6 @@
   <h3 class ="fyi"> *i make most of the gifs and doodles on this website using procreate :)* </h3>
   <center><img class ="heartgif" src="heartlogo.gif" alt ="heart" ></center>
   </body>
+
 </html>
 
