--- a/memories.html
+++ b/memories.html
@@ -25,6 +25,7 @@
     <br>
     <h3 class ="ballz">while i worked hard to make this page a memory column, i decided to remake it into a rant column. one of the main reasons i got into web development was because i was extremely dedicated to a tumblr blog a few years ago. i used this blog to vent about everything i was feeling and used it to express myself without keeping anything bottled in. although i am not the same person i was a few years ago, i am still struggling with my mental health and expressing what i'm feeling.<br> this page will be the beginning of me working on myself. i will use this page to write down what i'm feeling so i can understand it.  </h3>
     <h3 class ="ballz"> '20 - 21 </h3>
+    <h3 class = "ballz"> i feel isolated even though i'm not im literally surrounded by friends who love ME!!! WHY!!!!! </h3>
   </body>
 </html>
 
