--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
     </table>
     <br>
     <h3 class = "text-words"> this is da research page !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! </h3>
+    <h3 class = "text-words"> i think i might start to upload some of my doodles in here, i haven't had much time to work on anything because 1) college apps and 2) i literally deleted half of the stuff i've been working on because one day i guess i decided it wasn't good enough (like i did to this website) but now i'll embrace anything i make. so stay tuned!! </h3>
   </body>
 </html>
 
