--- a/favorites.html
+++ b/favorites.html
@@ -65,17 +65,23 @@
     <br></br>
     <h3 class = "fav-titles"> food </h3>
     <br></br>
-    <h3 class =  
+    <h3 class = "title-words"> 
+      maui poke - poke bowl (PHOTO INCOMING :))))))))) <br></br>
+    </h3>
 
     <br></br>
     <h3 class = "fav-titles"> movies </h3>
     <br></br>
-
+   <h3 class = "title-words"> 
+      transformers <br></br>
+    </h3>
 
     <br></br>
     <h3 class = "fav-titles"> shows </h3>
     <br></br>
-
+    <h3 class = "title-words"> 
+      demon slayer <br></br>
+    </h3>
 
     <br></br>
     <h3 class = "fav-titles"> trends </h3>
