--- a/memories.html
+++ b/memories.html
@@ -23,13 +23,15 @@
       </tr>  
     </table>
     <br>
-    <h3 class ="ballz">while i worked hard to make this page a memory column, i decided to remake it into a rant column. one of the main reasons i got into web development was because i was extremely dedicated to a tumblr blog a few years ago. i used this blog to vent about everything i was feeling and used it to express myself without keeping anything bottled in. although i am not the same person i was a few years ago, i am still struggling with my mental health and expressing what i'm feeling.<br> this page will be the beginning of me working on myself. i will use this page to write down what i'm feeling so i can understand it. OR MAYBE ILL UPLOAD GAMING CLIPS IDK I'm losing it but i love this website so much i feel bad for using it to do anything</h3>
+    <h3 class ="ballz">while i did want to make this a rant column, i decided to make it a memory/rant column. one of the main reasons i got into web development was because i was extremely dedicated to a tumblr blog a few years ago. i used this blog to vent about everything i was feeling and used it to express myself without keeping anything bottled in. although i am not the same person i was a few years ago, i am still struggling with my mental health and expressing what i'm feeling.<br> this page will be the beginning of me working on myself. i will use this page to write down what i'm feeling so i can understand it. OR MAYBE ILL UPLOAD GAMING CLIPS IDK I'm losing it but i love this website so much i feel bad for using it to do anything</h3>
     <h3 class ="ballz"> '20 - 21 </h3>
     <h3 class = "ballz"> i feel isolated even though i'm not im literally surrounded by friends who love ME!!! WHY!!!!! </h3>
     <h3 class = "ballz"> i'm finally free enough to work on the stuff i love like this website and finally have the time to play with friends. i really wanna make this website colorful now but that means i have to work on my art ;-;</h3>
     <br><br>
     <center><img class ="heartgif" src="picofme11422.jpg" alt ="me" ></center>
     <h3 class = "ballz"> i look very bad in this picture but i already read my english book so i'm just chilling in here, i'm in a writer's block for my gates scholarship </h3>
+    <br><br>
+     <h3 class = "ballz"> i'm still figuring out how to upload gaming clips on here because they usually become very weird and laggy </h3>
   </body>
 </html>
 
