--- a/memories.html
+++ b/memories.html
@@ -32,6 +32,9 @@
     <h3 class = "ballz"> i look very bad in this picture but i already read my english book so i'm just chilling in here, i'm in a writer's block for my gates scholarship </h3>
     <br><br>
      <h3 class = "ballz"> i'm still figuring out how to upload gaming clips on here because they usually become very weird and laggy </h3>
+     <br><br>
+     <h3 class ="ballz"> hello everyone reading this i hope u have a good day here is a real picture of me</h3> 
+     <center><img class ="heartgif" src="me2.jpg" alt ="me" ></center>
   </body>
 </html>
 
