--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
   <h3 class ="fyi"> *i make most of the gifs and doodles on this website using procreate :)* </h3>
   <center><img class ="heartgif" src="heartlogo.gif" alt ="heart" ></center>
+  <br><br>
+  <h3 class ="fyi"> *update log* </h3>
+  <h3 class ="fyi"> 1/30/22: i decided to start doing an update log cause i might have sorta deleted a good portion of what i was working on before by accident--i really hate how there's no undo tool on repl :( but basically i'm trying to add a starry night background but everytime i follow a tutorial it never works so please bare with me </h3>
   </body>
 
 </html>
