--- a/favorites.html
+++ b/favorites.html
@@ -79,9 +79,9 @@
     <br></br>
     <h3 class = "fav-titles"> shows </h3>
     <br></br>
-    <h3 class = "title-words"> 
-      demon slayer <br></br>
-    </h3>
+    <h3 class = "title-words"> demon slayer </h3>
+    <br></br>
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/NgjXMfGf_GU?start=126" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
 
     <br></br>
     <h3 class = "fav-titles"> trends </h3>
