--- a/projects.html
+++ b/projects.html
@@ -23,8 +23,7 @@
       </tr>  
     </table>
     <br>
-    <h3 class = "text-words"> this is da project page !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! </h3>
-    <h3 class = "text-words"> i think i might start to upload some of my doodles and clips on this page because i don't have the CS experience to make anything intricate yet, i haven't had much time to work on anything because 1) college apps and 2) i literally deleted half of the stuff i've been working on because one day i guess i decided it wasn't good enough (like i did to this website) but now i'll embrace anything i make. so stay tuned!! </h3>
+    <h3 class = "text-words"> i think i might start to upload some of my doodles and clips on this page because i don't have the CS experience to make anything intricate yet, i haven't had much time to work on anything because 1) college apps and 2) i literally deleted half of the stuff i've been working on because one day i guess i decided it wasn't good enough (like i did to this website) but i'm learning to embrace anything i make. so stay tuned!! </h3>
     <h1 class = "text-words"> toast </h1>
     <center><img class ="toastgif" src="Toast.gif" alt ="toast" ></center>
 
@@ -37,3 +36,5 @@
   </body>
 </html>
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NgjXMfGf_GU?start=126" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
