--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -9,7 +8,8 @@
 	<link>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" 
+   rel="stylesheet">
 </head>
 <body>
 	<script src="script.js"></script>
@@ -22,8 +22,14 @@
         <th><a href="memories.html"class = "navbar" >Memories</a></th>
       </tr>  
     </table>
-    <br>
-    <h3 class = "text-words"> i think i might start to upload some of my doodles and clips on this page because i don't have the CS experience to make anything intricate yet, i haven't had much time to work on anything because 1) college apps and 2) i literally deleted half of the stuff i've been working on because one day i guess i decided it wasn't good enough (like i did to this website) but i'm learning to embrace anything i make. so stay tuned!! </h3>
+  
+    <br> </br>
+    <h3 class = "text-words"> even though this page says projects, this is really a 
+    doodle page. right now, i don't have the CS experience to really create anything 
+    that expresses who i am or what i feel. despite this, i do doodle a lot on my ipad 
+    whenever i feel anything so this is what you'll see! </h3>
+    <br> </br>
+  
     <h1 class = "text-words"> toast </h1>
     <center><img class ="toastgif" src="Toast.gif" alt ="toast" ></center>
 
@@ -31,10 +37,11 @@
     <center><img class ="toastgif" src="Cheese.gif" alt ="toast" ></center>
 
     <h1 class = "text-words"> funny clip w friendss </h1>
-    <iframe width="560" height="315" src="https://medal.tv/games/little-nightmares/clips/3Okpnu9n-15t5/d1337ncgoQYn?invite=cr-MSxPOUcsMTQ3NzQxMzIs" frameborder="0" allowfullscreen></iframe>
-      </iframe>
+    <iframe width="560" height="315" src="https://medal.tv/games/little-  
+    nightmares/clips/3Okpnu9n-15t5/d1337ncgoQYn?invite=cr-MSxPOUcsMTQ3NzQxMzIs" 
+    frameborder="0" allowfullscreen></iframe> </iframe>
+  
   </body>
 </html>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NgjXMfGf_GU?start=126" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
