--- a/favorites.html
+++ b/favorites.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -9,7 +8,8 @@
 	<link>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" 
+  rel="stylesheet">
 </head>
 <body>
 	<script src="script.js"></script>
@@ -27,67 +27,78 @@
     <h3 class = "fav-titles"> music </h3>
     <br></br>
 
-    <h3 class = "title-words"> 
-      sofia - Clairo <br></br>
-    </h3>
+    <h3 class = "title-words"> sofia - Clairo </h3>
+    <br></br>
     <div>
-      <iframe src="https://open.spotify.com/embed/track/7B3z0ySL9Rr0XvZEAjWZzM?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <iframe src="https://open.spotify.com/embed/track/7B3z0ySL9Rr0XvZEAjWZzM?    
+       utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen=""       
+       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in- 
+       picture"></iframe>
     </div>
 
     <h3 class = "title-words"> 
-      4EVER - Clairo <br></br>
-    </h3>
+      4EVER - Clairo </h3>
+    <br></br>
     <div>
-     <iframe src="https://open.spotify.com/embed/track/5mIOsPuQdXchVY0jB5NO9Q?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+     <iframe src="https://open.spotify.com/embed/track/5mIOsPuQdXchVY0jB5NO9Q? 
+     utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" 
+     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 
     <h3 class = "title-words"> 
-      wachito rico - boy pablo <br></br>
-    </h3>
+      wachito rico - boy pablo </h3>
+    <br></br>
     <div>
-     <iframe src="https://open.spotify.com/embed/track/0OYf62rdwDouKohtCALD55?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+     <iframe src="https://open.spotify.com/embed/track/0OYf62rdwDouKohtCALD55?utm_source=generator" 
+     width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; 
+     encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 
     <h3 class = "title-words"> 
-      I Don't Know You - The Marias <br></br>
-    </h3>
+      I Don't Know You - The Marias </h3>
+    <br></br>
     <div>
-     <iframe src="https://open.spotify.com/embed/track/4cJOLN346rtOty3UPACsao?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+     <iframe src="https://open.spotify.com/embed/track/4cJOLN346rtOty3UPACsao?utm_source=generator" 
+     width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; 
+     encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
     
     <h3 class = "title-words"> 
-      Your Teeth in My Neck - Kaliuchis <br></br>
-    </h3>
+      Your Teeth in My Neck - Kaliuchis </h3>
+    <br></br>
     <div>
-      <iframe src="https://open.spotify.com/embed/track/54IbnYEdA3ymfxv07WgN3b?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <iframe src="https://open.spotify.com/embed/track/54IbnYEdA3ymfxv07WgN3b?utm_source=generator"      width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; 
+      encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 
     <br></br>
     <h3 class = "fav-titles"> food </h3>
     <br></br>
     <h3 class = "title-words"> 
-      maui poke - poke bowl (PHOTO INCOMING :))))))))) <br></br>
+      maui poke - poke bowl (PHOTO INCOMING :))))))))) 
     </h3>
-
+    <br></br>
+  
     <br></br>
     <h3 class = "fav-titles"> movies </h3>
     <br></br>
-   <h3 class = "title-words"> 
-      transformers <br></br>
+    <h3 class = "title-words"> 
+      transformers 
     </h3>
+    <br></br>
 
     <br></br>
     <h3 class = "fav-titles"> shows </h3>
     <br></br>
     <h3 class = "title-words"> demon slayer </h3>
     <br></br>
-    <iframe width="700" height="500" src="https://www.youtube.com/embed/NgjXMfGf_GU?start=126" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/NgjXMfGf_GU?start=126" 
+     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+     encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
 
     <br></br>
     <h3 class = "fav-titles"> trends </h3>
     <br></br>
-
-
 
   </body>
 </html>
