--- a/favorites.html
+++ b/favorites.html
@@ -22,19 +22,19 @@
         <th><a href="memories.html"class = "navbar" >Memories</a></th>
       </tr>  
     </table>
+  
+    <h3 class = "paragraph-words"> ♡ this is just a page of everything i've either read, watched, 
+    listened to, ate, or anything else that i think i should tell other people about. some of my 
+    favorites may be surprising, but they are good to me ♡＾▽＾♡ </h3>
+
 
     <br></br>
-    <h3 class = "fav-titles"> music </h3>
+    <h3 class = "fav-titles"> ♡ music ♡ </h3>
     <br></br>
 
     <h3 class = "title-words"> sofia - Clairo </h3>
     <br></br>
-    <div>
-      <iframe src="https://open.spotify.com/embed/track/7B3z0ySL9Rr0XvZEAjWZzM?    
-       utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen=""       
-       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in- 
-       picture"></iframe>
-    </div>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7B3z0ySL9Rr0XvZEAjWZzM?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
     <h3 class = "title-words"> 
       4EVER - Clairo </h3>
@@ -72,7 +72,7 @@
     </div>
 
     <br></br>
-    <h3 class = "fav-titles"> food </h3>
+    <h3 class = "fav-titles"> ♡ food ♡ </h3>
     <br></br>
     <h3 class = "title-words"> 
       maui poke - poke bowl (PHOTO INCOMING :))))))))) 
@@ -80,7 +80,7 @@
     <br></br>
   
     <br></br>
-    <h3 class = "fav-titles"> movies </h3>
+    <h3 class = "fav-titles"> ♡ movies ♡ </h3>
     <br></br>
     <h3 class = "title-words"> 
       transformers 
@@ -88,7 +88,7 @@
     <br></br>
 
     <br></br>
-    <h3 class = "fav-titles"> shows </h3>
+    <h3 class = "fav-titles"> ♡ shows ♡ </h3>
     <br></br>
     <h3 class = "title-words"> demon slayer </h3>
     <br></br>
@@ -97,7 +97,7 @@
      encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
 
     <br></br>
-    <h3 class = "fav-titles"> trends </h3>
+    <h3 class = "fav-titles"> ♡ anything else ♡ </h3>
     <br></br>
 
   </body>
