--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
     </table>
   
     <br> </br>
-    <h3 class = "text-words"> even though this page says projects, this is really a 
+    <h3 class = "paragraph-words"> ♡ even though this page says projects, this is really a 
     doodle page. right now, i don't have the CS experience to really create anything 
     that expresses who i am or what i feel. despite this, i do doodle a lot on my ipad 
-    whenever i feel anything so this is what you'll see! </h3>
+    whenever i feel anything so this is what you'll see! ♡ </h3>
     <br> </br>
   
     <h1 class = "text-words"> toast </h1>
@@ -36,10 +36,6 @@
     <h1 class = "text-words"> cheese </h1>
     <center><img class ="toastgif" src="Cheese.gif" alt ="toast" ></center>
 
-    <h1 class = "text-words"> funny clip w friendss </h1>
-    <iframe width="560" height="315" src="https://medal.tv/games/little-  
-    nightmares/clips/3Okpnu9n-15t5/d1337ncgoQYn?invite=cr-MSxPOUcsMTQ3NzQxMzIs" 
-    frameborder="0" allowfullscreen></iframe> </iframe>
   
   </body>
 </html>
