--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" 
   rel="stylesheet">
-
-  <title> km </title>
+  <title> kristy! </title>
 </head>
 <body>
 	<script src="script.js"></script>
